디코 봇 명령어 완성.